<resources>
    <string name="app_name">Vegable</string>
    <string name="title_products">Products</string>
    <string name="title_add_product">Add product</string>
    <string name="title_checklist">Checklist</string>
    <string name="title_map">Map</string>
    <string name="confirmation">Are you sure?</string>
    <string name="action_products">All products will be deleted.</string>
    <string name="action_checklists">All checklists will be deleted.</string>
    <string name="action_markers">All markers will be deleted.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancelled">Action has been cancelled.</string>
    <string name="all_products_deleted">All products have been deleted.</string>
    <string name="all_checklists_deleted">All checklists have been deleted.</string>
    <string name="all_markers_deleted">All markers have been deleted.</string>
    <string name="no_products_found">No products found.\n\nAdd the product by clicking the <b>+</b> button.</string>
    <string name="deleted">%s has been deleted.</string>
    <string name="undo">Undo</string>
    <string name="add_product">Add the product below.</string>
    <string name="product_name">Product name</string>
    <string name="barcode">Barcode (optional)</string>
    <string name="vegan">Vegan</string>
    <string name="add">Add</string>
    <string name="empty_product_name">Fill in the product name."</string>
    <string name="added">%s has been added.</string>
    <string name="fruits">Fruits</string>
    <string name="fruits_measurement">1 piece or 100 grams.</string>
    <string name="vegetables">Vegetables</string>
    <string name="vegetables_measurement">100 grams.</string>
    <string name="whole_grains">Whole grains</string>
    <string name="whole_grains_measurement">2 slices of bread or 50 grams of raw grains.</string>
    <string name="legumes">Legumes</string>
    <string name="legumes_measurement">80 grams of legumes or ½ meat substitute.</string>
    <string name="plantbased_dairy">Plant-based dairy</string>
    <string name="plantbased_dairy_measurement">1 glass or bowl of enriched plant-based dairy.</string>
    <string name="nuts_seeds_peanuts_avocado">Nuts, seeds, peanut and avocado</string>
    <string name="nuts_seeds_peanuts_avocado_measurement">30 grams of nuts or seeds, 2 servings of peanut butter or ½ avocado.</string>
    <string name="flax_seeds_chia_seeds">Flax seeds and chia seeds</string>
    <string name="flax_seeds_chia_seeds_measurement">1 tablespoon.</string>
    <string name="supplements">Supplements</string>
    <string name="supplements_measurement">Depending on personal needs.</string>
    <string name="drinks">Drinks</string>
    <string name="drinks_measurement">1 glass or mug of 250 milliliters of water, tea or coffee.</string>
    <string name="normal_map">Normal map</string>
    <string name="hybrid_map">Hybrid map</string>
    <string name="satellite_map">Satellite map</string>
    <string name="terrain_map">Terrain map</string>
    <string name="add_marker_name">Add a marker name.</string>
    <string name="cancel">Cancel</string>
    <string name="empty_marker_name">Fill in the marker name.</string>
    <string name="restored">%s has been restored.</string>
</resources>